syntax = "proto3";

package stats.messages;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.ewm.stats.proto";

message InteractionsCountRequestProto {
    repeated int64 event_id = 1;
}