syntax = "proto3";

package stats.service.collector;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.stats.collector";

import "google/protobuf/empty.proto";
import "stats/messages/user_action.proto";

service UserActionController {
    rpc CollectUserAction (stats.messages.UserActionProto)
            returns (google.protobuf.Empty);
}